Remove div .content that gallery was wrapped in and fix the consequences.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,13 +5,17 @@
   font-family: 'Dancing Script', cursive;
 }
 
+body, html {
+  height: 100%;
+}
+
 .wrapper {
   background-image: url('/textures/bg_paper.png');
-  height: 100vh;
+  height: 100%;
   width: 90vw;
   display: grid;
   margin: 0 auto;
-  grid-template-rows: 4.375rem 1fr 4.375rem 4.375rem;
+  grid-template-rows: 4.375rem 1fr 4.375rem 4.3754rem;
   grid-template-areas: "header" "container" "pagination" "footer";
   color: white;
 }
@@ -26,63 +30,53 @@
 
 .page-header {
   grid-area: header;
-  font-size: 2.2em;
-  line-height: 2em;
+  font-size: 2.2rem;
+  line-height: 2rem;
   font-weight: bold;
 }
 
-.container {
-  grid-area: container;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .modal-background {
-  display: none;
   position: absolute;
   width: 100vw;
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 2;
 }
 
-.modal {
-  position: fixed;
-  display: none;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-top: 30px;
-  padding-bottom: 5px;
-  top: 10vh;
+.modal-content {
+  position: relative;
+  display: block;
+  padding: 30px 15px 0 15px;
   z-index: 3;
-  background-color: rgba(255, 255, 255);
+  background-color: white;
   animation-name: zoom;
   animation-duration: 0.3s;
 }
 
-.modal>.modal-close {
-  font-family: sans-serif;
-  color: black;
-  font-size: 2.2rem;
+.modal-close {
   position: absolute;
-  margin: 0.475rem 0.9375rem 0.375rem 0.9375rem;
   top: 0;
   right: 0;
-  line-height: 1.125rem;
+  margin: 7px 15px 7px 15px;
+}
+
+.modal-close>p {
+  font-family: sans-serif;
+  line-height: 1rem;
+  font-size: 2.2rem;
   cursor: pointer;
 }
 
 .modal-image>img {
-max-height: 67vh;
-max-width: 75vw;
+  display: block;
+  max-height: 67vh;
+  max-width: 75vw;
 }
 
 .modal-caption {
-  top: 0;
-  left: 0;
-  color: black;
   text-align: center;
   margin: 10px 0;
 }
@@ -123,7 +117,6 @@ max-width: 75vw;
   /*background-color: #353535;*/
   background-color: white;
   transition: 0.3s;
-
 }
 
 .card:hover {
@@ -224,18 +217,19 @@ max-width: 75vw;
   .gallery {
     width: 100vw;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
   }
   .wrapper {
-    height: 100%;
     width: 100vw;
+    display: block;
+    overflow: auto;
   }
   .empty {
     top: 0;
     font-size: 15px;
     padding: 15px;
   }
-
   .card {
     margin: 10px;
     max-height: 80vh;
@@ -244,17 +238,14 @@ max-width: 75vw;
     cursor: default;
     overflow: hidden;
   }
-
   .card:hover {
     transform: none;
   }
-
   .card-image {
     position: static;
     width: 100%;
     height: 100%;
   }
-
   .card-caption {
     background-color: rgba(0, 0, 0, 0.7);
     color: white;
